force-app/main/default/objects/OCX_Expansion_Lead__c/OCX_Expansion_Lead__c.object-meta.xml
<CustomObject>
    <description>An OCX-qualified expansion signal for an existing Account, reviewed by Sales before Opportunity creation.</description>
    <label>Expansion Lead</label>
    <nameField>
        <displayFormat>EL-{00000}</displayFormat>
        <label>Expansion Lead Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expansion Leads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>