force-app/main/default/objects/OCX_Expansion_Lead__c/fields/OCX_Accepted_At__c.field-meta.xml
<CustomField>
    <fullName>OCX_Accepted_At__c</fullName>
    <label>Accepted At</label>
    <type>DateTime</type>
</CustomField>