force-app/main/default/objects/OCX_Expansion_Lead__c/fields/OCX_Accepted_By__c.field-meta.xml
<CustomField>
    <fullName>OCX_Accepted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Accepted By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Accepted Expansion Leads</relationshipLabel>
    <relationshipName>Accepted_Expansion_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>