force-app/main/default/objects/OCX_Expansion_Lead__c/fields/OCX_Account__c.field-meta.xml
<CustomField>
    <fullName>OCX_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Expansion Leads</relationshipLabel>
    <relationshipName>Expansion_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>