force-app/main/default/objects/OCX_Expansion_Lead__c/fields/OCX_Confidence__c.field-meta.xml
<CustomField>
    <fullName>OCX_Confidence__c</fullName>
    <label>Confidence</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>