force-app/main/default/objects/OCX_Expansion_Lead__c/fields/OCX_Converted_At__c.field-meta.xml
<CustomField>
    <fullName>OCX_Converted_At__c</fullName>
    <label>Converted At</label>
    <type>DateTime</type>
</CustomField>