force-app/main/default/objects/OCX_Expansion_Lead__c/fields/OCX_Converted_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>OCX_Converted_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Converted Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Source Expansion Leads</relationshipLabel>
    <relationshipName>Source_Expansion_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>