force-app/main/default/objects/OCX_Expansion_Lead__c/fields/OCX_Estimated_Value__c.field-meta.xml
<CustomField>
    <fullName>OCX_Estimated_Value__c</fullName>
    <label>Estimated Value</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>