force-app/main/default/objects/OCX_Expansion_Lead__c/fields/OCX_External_Key__c.field-meta.xml
<CustomField>
    <fullName>OCX_External_Key__c</fullName>
    <externalId>true</externalId>
    <label>OCX External Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>