force-app/main/default/objects/OCX_Expansion_Lead__c/fields/OCX_Last_Evaluated_At__c.field-meta.xml
<CustomField>
    <fullName>OCX_Last_Evaluated_At__c</fullName>
    <label>Last Evaluated At</label>
    <type>DateTime</type>
</CustomField>