force-app/main/default/objects/OCX_Expansion_Lead__c/fields/OCX_NPS_Class__c.field-meta.xml
<CustomField>
    <fullName>OCX_NPS_Class__c</fullName>
    <label>NPS Class Snapshot</label>
    <length>80</length>
    <type>Text</type>
</CustomField>