force-app/main/default/objects/OCX_Expansion_Lead__c/fields/OCX_Priority__c.field-meta.xml
<CustomField>
    <fullName>OCX_Priority__c</fullName>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
        <value><fullName>High</fullName><default>false</default><label>High</label></value>
        <value><fullName>Medium</fullName><default>false</default><label>Medium</label></value>
        <value><fullName>Low</fullName><default>false</default><label>Low</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>