force-app/main/default/objects/OCX_Expansion_Lead__c/fields/OCX_Propensity__c.field-meta.xml
<CustomField>
    <fullName>OCX_Propensity__c</fullName>
    <label>Propensity Snapshot</label>
    <length>80</length>
    <type>Text</type>
</CustomField>