force-app/main/default/objects/OCX_Expansion_Lead__c/fields/OCX_Qualification_Rule__c.field-meta.xml
<CustomField>
    <fullName>OCX_Qualification_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Qualification Rule</label>
    <referenceTo>OCX_Expansion_Qualification_Rule__c</referenceTo>
    <relationshipLabel>Expansion Leads</relationshipLabel>
    <relationshipName>Expansion_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>