force-app/main/default/objects/OCX_Expansion_Lead__c/fields/OCX_Rationale__c.field-meta.xml
<CustomField>
    <fullName>OCX_Rationale__c</fullName>
    <label>Qualification Rationale</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>