force-app/main/default/objects/OCX_Expansion_Lead__c/fields/OCX_Recommended_Product__c.field-meta.xml
<CustomField>
    <fullName>OCX_Recommended_Product__c</fullName>
    <label>Recommended Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>