force-app/main/default/objects/OCX_Expansion_Lead__c/fields/OCX_Signal_ID__c.field-meta.xml
<CustomField>
    <fullName>OCX_Signal_ID__c</fullName>
    <label>OCX Signal ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>