force-app/main/default/objects/OCX_Expansion_Lead__c/fields/OCX_Signal_Type__c.field-meta.xml
<CustomField>
    <fullName>OCX_Signal_Type__c</fullName>
    <label>Signal Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
        <value><fullName>Upsell</fullName><default>false</default><label>Upsell</label></value>
        <value><fullName>Cross-sell</fullName><default>false</default><label>Cross-sell</label></value>
        <value><fullName>Product Expansion</fullName><default>false</default><label>Product Expansion</label></value>
        <value><fullName>Service Expansion</fullName><default>false</default><label>Service Expansion</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>