force-app/main/default/objects/OCX_Expansion_Lead__c/fields/OCX_Source_URL__c.field-meta.xml
<CustomField>
    <fullName>OCX_Source_URL__c</fullName>
    <label>OCX Source URL</label>
    <type>Url</type>
</CustomField>