force-app/main/default/objects/OCX_Expansion_Lead__c/fields/OCX_Status__c.field-meta.xml
<CustomField>
    <fullName>OCX_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
        <value><fullName>New</fullName><default>false</default><label>New</label></value>
        <value><fullName>Assigned</fullName><default>false</default><label>Assigned</label></value>
        <value><fullName>Working</fullName><default>false</default><label>Working</label></value>
        <value><fullName>Accepted</fullName><default>false</default><label>Accepted</label></value>
        <value><fullName>Rejected</fullName><default>false</default><label>Rejected</label></value>
        <value><fullName>Converted</fullName><default>false</default><label>Converted</label></value>
        <value><fullName>Expired</fullName><default>false</default><label>Expired</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>