force-app/main/default/objects/OCX_Expansion_Lead__c/listViews/Accepted_Expansion_Leads.listView-meta.xml
<ListView>
    <fullName>Accepted_Expansion_Leads</fullName>
    <columns>NAME</columns>
    <columns>OCX_Account__c</columns>
    <columns>OCX_Status__c</columns>
    <columns>OCX_Accepted_By__c</columns>
    <columns>OCX_Accepted_At__c</columns>
    <columns>OCX_Estimated_Value__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OCX_Status__c</field>
        <operation>equals</operation>
        <value>Accepted</value>
    </filters>
    <label>Accepted Expansion Leads</label>
</ListView>