force-app/main/default/objects/OCX_Expansion_Lead__c/listViews/All_Expansion_Leads.listView-meta.xml
<ListView>
    <fullName>All_Expansion_Leads</fullName>
    <columns>NAME</columns>
    <columns>OCX_Account__c</columns>
    <columns>OCX_Status__c</columns>
    <columns>OCX_NPS_Class__c</columns>
    <columns>OCX_Propensity__c</columns>
    <columns>OCX_Priority__c</columns>
    <columns>OCX_Estimated_Value__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Expansion Leads</label>
</ListView>