force-app/main/default/objects/OCX_Expansion_Lead__c/listViews/Converted_Expansion_Leads.listView-meta.xml
<ListView>
    <fullName>Converted_Expansion_Leads</fullName>
    <columns>NAME</columns>
    <columns>OCX_Account__c</columns>
    <columns>OCX_Status__c</columns>
    <columns>OCX_Converted_Opportunity__c</columns>
    <columns>OCX_Converted_At__c</columns>
    <columns>OCX_Estimated_Value__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OCX_Status__c</field>
        <operation>equals</operation>
        <value>Converted</value>
    </filters>
    <label>Converted Expansion Leads</label>
</ListView>